# cheminformatics_toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
cheminformatics_toolkit/: calculate.py  cli.py  crest.py  global_data.py  main.py  utils.py  utils_crest.py  utils_struct_analysis.py
devtools/conda-env/dev/: environment.yml
mvp_python/: __init__.py  cli.py  global_data.py  main.py
templates/pyadf/: generic.pyadf  run.sh
tests/: helper.py  test_calc.py
tests/crest_test1/: README.md  test.inp
tests/crest_test1/reference/: output.txt
tests/crest_test1/reference/qm_calcs/pyadf/cluster_1_struc_1/spinorbitZORA/PBE/TZ2P/: generic.pyadf
tests/crest_test1/reference/qm_calcs/pyadf/cluster_1_struc_1/spinorbitZORA/PBE/TZ2P/coordinates/: cluster_1_struc_1.xyz  cluster_1_struc_1_sub1.xyz  cluster_1_struc_1_sub2.xyz
tests/crest_test1/reference/qm_calcs/pyadf/cluster_1_struc_2/spinorbitZORA/PBE/TZ2P/: generic.pyadf  run.sh
tests/crest_test1/reference/qm_calcs/pyadf/cluster_1_struc_2/spinorbitZORA/PBE/TZ2P/coordinates/: cluster_1_struc_2_sub1.xyz  cluster_1_struc_2_sub2.xyz
tests/crest_test1/reference/tmpdir/: cluster_1_struc_2.xyz
tests/inptest/: test.inp
tests/inptest/reference/: result.txt
tests/rdkit_test1/: test.inp
tests/test1/: test.inp
tests/testdata/: data.csv
tests/testdata/crest_data/cluster_1/conformers/: crest_conformers.xyz
tests/testdata/crest_data/cluster_1/grow/: cluster.xyz  qcg_grow.xyz
usecases/: gold_clusters.py  test_analysis.inp  test_crest_pyadf.inp
usecases/coordinates/: test.sdf  test.xyz
