[tool.poetry]
name = "cheminformatics_toolkit"
version = "0.1.2"
description = ""
authors = ["gosia olejniczak <gosia.olejniczak@gmail.com>"]
readme = "README.md"
packages = [{include = "cheminformatics_toolkit"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.pytest.ini_options]
pythonpath = [
  "cheminformatics_toolkit"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
